kubernetes-yml/eco-auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eco-api-auth
  labels:
    app: eco-api-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eco-api-auth
  template:
    metadata:
      labels:
        app: eco-api-auth
    spec:
      containers:
        - name: eco-api-auth
          image: moviedomfo/eco-api-auth:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3010
          volumeMounts:
            - name: file-volume
              mountPath: /files
      restartPolicy: Always 

      volumes:
      - name: file-volume
        persistentVolumeClaim:
          claimName: files-eco-pvc
