kubernetes-yml/eco-comerce-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eco-api-comerce
  labels:
    app: eco-api-comerce
spec:
  replicas: 2
  selector:
    matchLabels:
      app: eco-api-comerce
  template:
    metadata:
      labels:
        app: eco-api-comerce
    spec:
      containers:
        - name: eco-api-comerce
          image: moviedomfo/eco-api-comerce:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3012
          volumeMounts:
            - name: file-volume
              mountPath: /app/files
      volumes:
      - name: file-volume
        persistentVolumeClaim:
          claimName: files-eco-pvc
