kubernetes-yml/eco-orders-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eco-api-orders
  labels:
    app: eco-api-orders
spec:
  replicas: 2
  selector:
    matchLabels:
      app: eco-api-orders
  template:
    metadata:
      labels:
        app: eco-api-orders
    spec:
      containers:
        - name: eco-api-orders
          image: moviedomfo/eco-api-orders:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3011
          volumeMounts:
            - name: file-volume
              mountPath: /app/files
      volumes:
      - name: file-volume
        persistentVolumeClaim:
          claimName: files-eco-pvc
