kubernetes-yml/eco-api-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: eco-api-auth-service
spec:
  type: ClusterIP
  selector:
    app: eco-api-auth
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3010
---
apiVersion: v1
kind: Service
metadata:
  name: eco-api-orders-service
spec:
  type: ClusterIP
  selector:
    app: eco-api-orders
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3011
---
apiVersion: v1
kind: Service
metadata:
  name: eco-api-comerce-service
spec:
  type: ClusterIP
  selector:
    app: eco-api-comerce
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3012
