kubernetes-yml/eco-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eco-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: eco.local
      http:
       paths:
          - path: /orders(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: eco-api-orders-service
                port:
                  number: 80
      
          - path: /comerce(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: eco-api-comerce-service
                port:
                  number: 80  
          - path: /sec(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: eco-api-auth-service
                port:
                  number: 80
